<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context="com.tmdb.esqueceramdemim.LoginActivity">

    <FrameLayout
        android:id="@+id/loginContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="350dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp">

        <data>
            <variable
                android:name="LoginPage"/>
        </data>
        <FrameLayout
            android:id="@+id/optionsContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/roundedbutton"
                android:fontFamily="@font/aclonica"
                android:text="@string/btLogin"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:typeface="normal" />

            <Button
                android:id="@+id/btSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/roundedbutton"
                android:fontFamily="@font/aclonica"
                android:text="@string/btSignup"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:typeface="normal" />

            <Button
                android:id="@+id/btLater"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="5dp"
                android:background="@drawable/roundedbutton"
                android:fontFamily="@font/aclonica"
                android:text="@string/btlater"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:typeface="normal" />
        </FrameLayout>


    </FrameLayout>

</RelativeLayout>
